[gd_scene load_steps=9 format=3 uid="uid://dv7rxitghuxh1"]

[ext_resource type="Script" path="res://Assets/Scripts/Score.gd" id="1_tgtd5"]
[ext_resource type="Texture2D" uid="uid://cgmdblafswlh5" path="res://Assets/Sprites/UI/spaceBackground.png" id="2_25u1j"]
[ext_resource type="Texture2D" uid="uid://cwdyd47l226rl" path="res://Assets/Sprites/Asteroids/Asteroid1.webp" id="3_gje87"]
[ext_resource type="Texture2D" uid="uid://dw63cnnr4wav4" path="res://Assets/Sprites/UI/PlayButtonNormal.png" id="4_olmsp"]
[ext_resource type="Texture2D" uid="uid://coom6wjhm8m7x" path="res://Assets/Sprites/UI/PlayButtonHover.png" id="5_ufdeu"]
[ext_resource type="FontFile" uid="uid://b4pfncn0u4kwx" path="res://Assets/Fonts/Belanosima-SemiBold.ttf" id="6_g7osh"]
[ext_resource type="FontFile" uid="uid://ctvcrvsesyubc" path="res://Assets/Fonts/Belanosima-Regular.ttf" id="7_mu28j"]

[sub_resource type="Curve2D" id="Curve2D_ytkd8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 784, -520, 0, 0, 0, 0, 184, 528, 0, 0, 0, 0, -32, -600, 0, 0, 0, 0, -808, 520)
}
point_count = 4

[node name="Menu" type="Node2D"]
script = ExtResource("1_tgtd5")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_25u1j")

[node name="Camera2D" type="Camera2D" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_gje87")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Sprite2D"]
position = Vector2(-1, 1)
scale = Vector2(0.9, 0.9)
rect = Rect2(-125, -125, 250, 250)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_ytkd8")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(784, -520)
rotates = false

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 208.0
offset_top = 192.0
offset_right = 560.0
offset_bottom = 312.0
texture_normal = ExtResource("4_olmsp")
texture_pressed = ExtResource("5_ufdeu")
texture_hover = ExtResource("5_ufdeu")
texture_focused = ExtResource("5_ufdeu")
ignore_texture_size = true
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 104.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.690196)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("6_g7osh")
theme_override_font_sizes/normal_font_size = 72
text = "Menu"
scroll_active = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -52)
scale = Vector2(1, 2.08219)
texture = ExtResource("4_olmsp")

[node name="Names" type="RichTextLabel" parent="Sprite2D2"]
offset_left = -256.0
offset_top = -67.0
offset_bottom = 98.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_constants/outline_size = 7
theme_override_fonts/normal_font = ExtResource("7_mu28j")
theme_override_font_sizes/normal_font_size = 25
autowrap_mode = 0

[node name="Times" type="RichTextLabel" parent="Sprite2D2"]
offset_top = -67.0
offset_right = 256.0
offset_bottom = 98.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_constants/outline_size = 7
theme_override_fonts/normal_font = ExtResource("7_mu28j")
theme_override_font_sizes/normal_font_size = 25

[node name="CurrentTimes" type="RichTextLabel" parent="Sprite2D2"]
offset_top = -98.0
offset_right = 256.0
offset_bottom = -67.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_constants/outline_size = 7
theme_override_fonts/normal_font = ExtResource("7_mu28j")
theme_override_font_sizes/normal_font_size = 26
text = "TIME"

[node name="NameEnter" type="TextEdit" parent="Sprite2D2"]
offset_left = -256.0
offset_top = -97.9737
offset_right = -24.0
offset_bottom = -66.9737
theme_override_colors/background_color = Color(0, 0, 0, 0.156863)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_g7osh")
theme_override_font_sizes/font_size = 20
placeholder_text = "Your Name"

[node name="SaveButton" type="TextureButton" parent="Sprite2D2"]
offset_left = 192.0
offset_top = -98.0
offset_right = 272.0
offset_bottom = -71.0
texture_normal = ExtResource("4_olmsp")
texture_pressed = ExtResource("5_ufdeu")
texture_hover = ExtResource("5_ufdeu")
texture_focused = ExtResource("5_ufdeu")
ignore_texture_size = true
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D2/SaveButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 72.0
offset_bottom = 23.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.313726)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("6_g7osh")
theme_override_font_sizes/normal_font_size = 15
text = "    Save"
scroll_active = false

[connection signal="screen_exited" from="Sprite2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Sprite2D2/SaveButton" to="." method="_on_save_button_pressed"]
